--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   iconly: ^1.0.1
   cloud_firestore: ^4.9.0
+  intl: ^0.18.1
   # google_sign_in: ^6.1.4
 
   persistent_bottom_nav_bar_v2:
