--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   permission_handler: ^10.4.3
   firebase_core: ^2.15.1
   syncfusion_flutter_datepicker: ^22.2.11
+  textfield_search: ^0.10.0
 
 
 dev_dependencies:
