--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_core: ^2.15.1
   syncfusion_flutter_datepicker: ^22.2.11
   textfield_search: ^0.10.0
+  provider: ^6.0.5
 
 
 dev_dependencies:
