--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^22.2.11
   textfield_search: ^0.10.0
   provider: ^6.0.5
+  country_picker: ^2.0.21
 
 
 dev_dependencies:
@@ -83,6 +84,8 @@ flutter:
   assets:
     - lib/images/logoashapp.png
     - lib/images/itemimage.png
+    - lib/images/gicon.png
+    - lib/images/aicon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
