--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,33 +34,35 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_auth: ^4.7.2
-  flutter_bloc: ^8.1.3
+  cupertino_icons: 
+  firebase_auth: 
+  flutter_bloc: 
   # persistent_bottom_nav_bar_v2: ^4.2.8
-  line_icons: ^2.0.3
-  fluentui_system_icons: ^1.1.210
-  font_awesome_flutter: ^10.4.0
-  iconly: ^1.0.1
-  cloud_firestore: ^4.9.0
-  intl: ^0.18.1
+  line_icons: 
+  fluentui_system_icons: 
+  font_awesome_flutter: 
+  iconly: 
+  cloud_firestore: 
+  intl: 
   # google_sign_in: ^6.1.4
 
   persistent_bottom_nav_bar_v2:
    git:
     url: https://github.com/safder5/PersistentBottomNavBarV2.git
-  firebase_storage: ^11.2.6
-  image_picker: ^1.0.3
-  permission_handler: ^10.4.3
-  firebase_core: ^2.15.1
-  syncfusion_flutter_datepicker: ^22.2.11
-  textfield_search: ^0.10.0
-  provider: ^6.0.5
-  country_picker: ^2.0.21
-  lottie: ^2.7.0
-  flutter_svg: ^2.0.9
-  google_sign_in: ^6.1.6
-  connectivity: ^3.0.6
+  firebase_storage: 
+  image_picker: 
+  permission_handler: 
+  firebase_core: 
+  syncfusion_flutter_datepicker: 
+  textfield_search: 
+  provider: 
+  country_picker: 
+  lottie: 
+  flutter_svg: 
+  google_sign_in: 
+  connectivity: 
+  cached_network_image:
+  flutter_image_compress:
   
 
 
