--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,7 +93,9 @@ flutter:
     - lib/images/itemimage.png
     - lib/images/gicon.png
     - lib/images/aicon.png
-    - lib/images/sme.png
+    - lib/images/applogo.png
+
+
     - lib/animation/
     - lib/icons/
 
